add all changes

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -22,6 +22,30 @@ process {
         ext.args = '--quiet'
     }
 
+    withName: BBMAP_BBDUK {
+        ext.args = 'ktrim='+ params.ktrim + ' k='+ params.k + ' mink='+ params.mink + ' hdist='+ params.hdist + ' qtrim='+ params.qtrim + ' trimq=' + params.qual + ' minlen='+ params.minlen + ' '+ params.extra 
+    }
+
+    withName: FASTP {
+        ext.args1 = 'average_qual='+ params.qual + ' length_required='+ params.minlen 
+        ext.args2 = params.overrepresentation_analysis == true ? " overrepresentation_analysis = true ":''
+        ext.args3 = params.low_complexity_filter == true ? " low_complexity_filter = true complexity_threshold="+params.complexity_threshold: ''
+        ext.args4 = params.dedup == true ? ' dedup = true dup_calc_accuracy = '+params.dup_calc_accuracy: ''
+        ext.args = ext.args1 + ext.args2 + ext.args3 + ext.args4
+    }
+
+    withName: PARDRE {
+        ext.args = ' -z '
+    }
+
+    withName: SPADES {
+        ext.args = params.spades_kmer ?' -k '+params.spades_kmer:''
+    }
+
+    withName: SAMTOOLS_CONSENSUS{
+        ext.args = ' -A --show-ins yes --show-del yes '
+    }
+
     withName: 'MULTIQC' {
         ext.args   = { params.multiqc_title ? "--title \"$params.multiqc_title\"" : '' }
         publishDir = [
