--- a/nextflow.config
+++ b/nextflow.config
@@ -11,7 +11,29 @@ params {
 
     // TODO nf-core: Specify your pipeline's command line flags
     // Input options
-    input                      = null
+    input = null
+    reference_fasta = null
+    filtering_tool = "bbduk" //other valid option is fastp
+    reference_adapter_fas = 'gcf-assemble_shortreads/assets/adapters_incl_NEBNextmanual.fa'
+    qual = 30
+    minlen = 50
+
+    //bbduk options
+    ktrim = "r"
+    k = 23
+    mink = 11
+    hdist = 1
+    extra = "tpe tbo"
+    qtrim="rl"
+
+    spades_kmer = null
+
+    //fastp options
+    overrepresentation_analysis = true
+    low_complexity_filter = true 
+    complexity_threshold = 50
+    dedup = true
+    dup_calc_accuracy = 6
 
     // MultiQC options
     multiqc_config             = null
