added support for multiple references as well as mummer alignment

--- a/nextflow.config
+++ b/nextflow.config
@@ -27,6 +27,7 @@ params {
     qtrim="rl"
 
     spades_kmer = null
+    galignment_tool = "minimap2" //other valid option is mummer
 
     //fastp options
     overrepresentation_analysis = true
