added support for consensus based assembly

--- a/nextflow.config
+++ b/nextflow.config
@@ -17,6 +17,7 @@ params {
     reference_adapter_fas = 'gcf-assemble_shortreads/assets/adapters_incl_NEBNextmanual.fa'
     qual = 30
     minlen = 50
+    consensus_fasta = false
 
     //bbduk options
     ktrim = "r"
