added support for consensus based sequences

--- a/nextflow.config
+++ b/nextflow.config
@@ -13,6 +13,7 @@ params {
     // Input options
     input = null
     reference_fasta = null
+    reference_bwaidx = null
     filtering_tool = "bbduk" //other valid option is fastp
     reference_adapter_fas = 'gcf-assemble_shortreads/assets/adapters_incl_NEBNextmanual.fa'
     qual = 30
