--- a/conf/modules.config
+++ b/conf/modules.config
@@ -27,10 +27,10 @@ process {
     }
 
     withName: FASTP {
-        ext.args1 = 'average_qual='+ params.qual + ' length_required='+ params.minlen 
-        ext.args2 = params.overrepresentation_analysis == true ? " overrepresentation_analysis = true ":''
-        ext.args3 = params.low_complexity_filter == true ? " low_complexity_filter = true complexity_threshold="+params.complexity_threshold: ''
-        ext.args4 = params.dedup == true ? ' dedup = true dup_calc_accuracy = '+params.dup_calc_accuracy: ''
+        ext.args1 = '--average_qual '+ params.qual + ' length_required '+ params.minlen 
+        ext.args2 = params.overrepresentation_analysis == true ? " --overrepresentation_analysis true ":''
+        ext.args3 = params.low_complexity_filter == true ? " --low_complexity_filter true --complexity_threshold "+params.complexity_threshold: ''
+        ext.args4 = params.dedup == true ? ' --dedup true --dup_calc_accuracy '+params.dup_calc_accuracy: ''
         ext.args = ext.args1 + ext.args2 + ext.args3 + ext.args4
     }
 
