fastp dedup is set to false

--- a/nextflow.config
+++ b/nextflow.config
@@ -35,7 +35,7 @@ params {
     overrepresentation_analysis = true
     low_complexity_filter = true 
     complexity_threshold = 50
-    dedup = true
+    dedup = false
     dup_calc_accuracy = 6
 
     // MultiQC options
